デプロイ修正１

--- a/config/database.yml
+++ b/config/database.yml
@@ -52,4 +52,4 @@ production:
   database: our_blog_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+  socket: /tmp/mysql.sock
